--- a/babyshop_zeta/index.html
+++ b/babyshop_zeta/index.html
@@ -2,9 +2,13 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <link rel="icon" type="image/svg+xml" href="/src/assets/images/logo_baby.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vite + React</title>
+    <title>Baby Shop</title>
+    
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    
+   
   </head>
   <body>
     <div id="root"></div>
